--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav >
             <div class="logo"><a href="part2.html"><img src="images/logo.png" style=" height: 90px;"></a></div>
             <ul class="topnav" id="dropdownClick"> 
-                <li><a href="part2.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="university.html">University</a></li>
                 <li><a href="#">Career</a></li>
                 <li><a href="aboutme.html">About me</a></li>
