--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <source src="images/video.mp4" type="video/mp4">
         </video>
         <nav >
-            <div class="logo"><a href="part2.html"><img src="images/logo.png" style=" height: 90px;"></a></div>
+            <div class="logo"><a href="index.html" style="text-decoration: none;"><img src="images/logo.png" style=" height: 90px;"></a></div>
             <ul class="topnav" id="dropdownClick"> 
-                <li><a href="part2.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="university.html">University</a></li>
                 <li><a href="#">Career</a></li>
                 <li><a href="aboutme.html">About me</a></li>
