--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo"><a href="index.html" style="text-decoration: none;"><img src="images/logo.png" style=" height: 90px;"></a></div>
             <ul class="topnav" id="dropdownClick"> 
                 <li><a href="index.html">Home</a></li>
-                <li><a href="university.html">University</a></li>
+                <li><a href="/israel-welcome/university/university.html">University</a></li>
                 <li><a href="#">Career</a></li>
                 <li><a href="aboutme.html">About me</a></li>
                 <li class="dropdownicon"><a href="javascript:void(0);"  onclick="dropdownMenu()">&#9776;</a></li>
