--- a/university/university.html
+++ b/university/university.html
@@ -44,7 +44,7 @@
             <img src="../images/slider3.png" alt="">
           </div>
           <div class="slide">
-            <img src="../aston-martin.jpg" alt="">
+            <img src="../images/slider4.png" alt="">
           </div>
           <!--slide images end-->
           <!--automatic navigation start-->
