--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <title>Israel's website</title>
 </head>
 <body>
-    
+    <div class="description"><h3 class="header" >Built by <a href="#israelsportfolio.html" target="_blank"> Israel</a></h3></div>
     <div class="background">
         <video autoplay loop muted plays-inline class="back-video">
             <source src="images/video.mp4" type="video/mp4">
         </video>
+      
         <nav >
             <div class="logo"><a href="index.html" style="text-decoration: none;"><img src="images/logo.png" style=" height: 90px;"></a></div>
             <ul class="topnav" id="dropdownClick"> 
@@ -28,9 +29,8 @@
         <div class="content">
             <h2>Welcome</h2>
             <a href="alevel.html">Explore</a>
-        </div>
+        </div>   
     </div>
-        <h3 class="footer" >Built by <a href="#israelsportfolio.html" target="_blank"> Israel</a></h3>
 
 </body>
 </html>
