--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Israel's website</title>
 </head>
 <body>
-    <div class="description"><h3 class="header" >Built by <a href="#israelsportfolio.html" target="_blank"> Israel</a></h3></div>
+    <div class="description"><h3 class="header" >Built by <a href="#israelsportfolio.netlify.app" target="_blank"> Israel</a></h3></div>
     <div class="background">
         <video autoplay loop muted plays-inline class="back-video">
             <source src="images/video.mp4" type="video/mp4">
@@ -22,13 +22,13 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/university/university.html">University</a></li>
                 <li><a href="#">Career</a></li>
-                <li><a href="aboutme.html">About me</a></li>
+                <li><a href="israelsportfolio.netlify.app">About me</a></li>
                 <li class="dropdownicon"><a href="javascript:void(0);"  onclick="dropdownMenu()">&#9776;</a></li>
              </ul>  
         </nav> 
         <div class="content">
             <h2>Welcome</h2>
-            <a href="alevel.html">Explore</a>
+            <a href="israelsportfolio.netlify.app">Explore</a>
         </div>   
     </div>
 
