--- a/career/career.html
+++ b/career/career.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="logo" href="../images/logo.png"/>
-    <script type ="text/javascript" src="university.js"></script>
-    <link rel= "stylesheet" href="university.css">
-    <title>Israel's university</title>
+    <script type ="text/javascript" src="career.js"></script>
+    <link rel= "stylesheet" href="career.css">
+    <title>Israel's Career</title>
 </head>
 <body>
     <div class="background">
@@ -15,8 +15,8 @@
             <div class="logo"><a href="/index.html"><img src="../images/logo1.png" style=" height: 90px;"></a></div>
                <ul class="topnav" id="dropdownClick"> 
                  <li><a href="https://israelswebsite.netlify.app">Home</a></li>
-                 <li style="text-decoration:underline;"><a href="university.html">University</a></li>
-                 <li><a href="/career/career.html">Career</a></li>
+                 <li><a href="/university/university.html">University</a></li>
+                 <li style="text-decoration:underline;"><a href="career.html">Career</a></li>
                  <li><a href="israelsportfolio.netlify.app">About me</a></li>
                  <li class="dropdownicon"><a href="javascript:void(0);"  onclick="dropdownMenu()">&#9776;</a></li>
                </ul>  
