--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="topnav" id="dropdownClick"> 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/university/university.html">University</a></li>
-                <li><a href="#">Career</a></li>
+                <li><a href="/career/career.html">Career</a></li>
                 <li><a href="israelsportfolio.netlify.app">About me</a></li>
                 <li class="dropdownicon"><a href="javascript:void(0);"  onclick="dropdownMenu()">&#9776;</a></li>
              </ul>  
