--- a/university/university.html
+++ b/university/university.html
@@ -12,7 +12,7 @@
 <body>
     <div class="background">
         <nav style="margin-bottom: 200px;">
-            <div class="logo"><a href="/index.html"><img src="../images/logo1.png" style=" height: 90px;"></a></div>
+            <div class="logo"><a href="/index.html"><img src="../images/logos.png" style=" height: 90px;"></a></div>
                <ul class="topnav" id="dropdownClick"> 
                  <li><a href="https://israelswebsite.netlify.app">Home</a></li>
                  <li style="text-decoration:underline;"><a href="university.html">University</a></li>
