--- a/career/career.html
+++ b/career/career.html
@@ -14,7 +14,7 @@
         <nav style="margin-bottom: 200px;">
             <div class="logo"><a href="/index.html"><img src="../images/logos.png" style=" height: 90px;"></a></div>
                <ul class="topnav" id="dropdownClick"> 
-                 <li><a href="https://israelswebsite.netlify.app">Home</a></li>
+                 <li><a href="/index.html">Home</a></li>
                  <li><a href="/university/university.html">University</a></li>
                  <li style="text-decoration:underline;"><a href="career.html">Career</a></li>
                  <li><a href="israelsportfolio.netlify.app">About me</a></li>
