--- a/career/career.html
+++ b/career/career.html
@@ -17,7 +17,7 @@
                  <li><a href="/index.html">Home</a></li>
                  <li><a href="/university/university.html">University</a></li>
                  <li style="text-decoration:underline;"><a href="career.html">Career</a></li>
-                 <li><a href="israelsportfolio.netlify.app">About me</a></li>
+                 <li><a href="israelakomsportfolio.netlify.app">About me</a></li>
                  <li class="dropdownicon"><a href="javascript:void(0);"  onclick="dropdownMenu()">&#9776;</a></li>
                </ul>  
         </nav> 
