--- a/university/university.html
+++ b/university/university.html
@@ -17,7 +17,7 @@
                  <li><a href="https://israelswebsite.netlify.app">Home</a></li>
                  <li style="text-decoration:underline;"><a href="university.html">University</a></li>
                  <li><a href="/career/career.html">Career</a></li>
-                 <li><a href="israelakomsportfolio.netlify.app">About me</a></li>
+                 <li><a href="https://israelakomsportfolio.netlify.app/">About me</a></li>
                  <li class="dropdownicon"><a href="javascript:void(0);"  onclick="dropdownMenu()">&#9776;</a></li>
                </ul>  
         </nav> 
