--- a/career/career.html
+++ b/career/career.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="logo" href="../images/logo.png"/>
+    <link rel="icon" type="logo" href="../images/logo1.png"/>
     <script type ="text/javascript" src="career.js"></script>
     <link rel= "stylesheet" href="career.css">
     <title>Israel's Career</title>
@@ -12,7 +12,7 @@
 <body>
     <div class="background">
         <nav style="margin-bottom: 200px;">
-            <div class="logo"><a href="/index.html"><img src="../images/logos.png" style=" height: 90px;"></a></div>
+            <div class="logo"><a href="/index.html"><img src="../images/logo1.png" style=" height: 90px;"></a></div>
                <ul class="topnav" id="dropdownClick"> 
                  <li><a href="/index.html">Home</a></li>
                  <li><a href="/university/university.html">University</a></li>
