--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="logo" href="images/logo.png"/>
+    <link rel="icon" type="logo" href="images/logo1.png"/>
 
     <title>Israel's website</title>
 </head>
@@ -13,11 +13,11 @@
     <div class="description"><h3 class="header" >Built by <a href="https://israelakomsportfolio.netlify.app/" target="_blank"> Israel</a></h3></div>
     <div class="background">
         <video autoplay loop muted plays-inline class="back-video">
-            <source src="images/video.mp4" type="video/mp4">
+            <source src="images/water.mp4" type="video/mp4">
         </video>
       
         <nav >
-            <div class="logo"><a href="index.html" style="text-decoration: none;"><img src="images/logo.png" style=" height: 90px;"></a></div>
+            <div class="logo"><a href="index.html" style="text-decoration: none;"><img src="images/logo1.png" style=" height: 90px;"></a></div>
             <ul class="topnav" id="dropdownClick"> 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/university/university.html">University</a></li>
